Fixed footer on mobile

--- a/src/gatsby-theme-portfolio-minimal/globalStyles/theme.css
+++ b/src/gatsby-theme-portfolio-minimal/globalStyles/theme.css
@@ -44,6 +44,10 @@ body[data-theme='darkTheme'] {
     nav {
         width: 100% !important;
     }
+
+    footer a[aria-current] {
+        display: none !important;
+    }
 }
 
 .cta-button {
